--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <p>Humidity</p>
                 </div>
                 <div class="extraInfo-container">
-                    <span aria-hidden="true">༄</span>
+                    <span aria-hidden="true">˳༄꠶</span>
                     <p class="wind-speed">12 kph</p>
                     <p>Wind</p>
                 </div>
