layout change css and index.html

--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@
             <section class="extra-info">
                 <div class="extraInfo-container">
                     <span aria-hidden="true">💧</span>
-                    <p class="humidity">65%</p>
+                    <p class="humidity info-bottom">65%</p>
                     <p>Humidity</p>
                 </div>
                 <div class="extraInfo-container">
                     <span aria-hidden="true">˳༄꠶</span>
-                    <p class="wind-speed">12 kph</p>
+                    <p class="wind-speed info-bottom">12 kph</p>
                     <p>Wind</p>
                 </div>
                 <div class="extraInfo-container">
                     <span aria-hidden="true">👁</span>
-                    <p class="visibility">10 km</p>
+                    <p class="visibility info-bottom">10 km</p>
                     <p>Visibility</p>
                 </div>
             </section>
