fixing html, css and js

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
                 </div>
                 <input id="input-text" type="text" placeholder="Enter location..." aria-label="Search">
 
-                <hgroup>
+                <div class="header">
                     <p class="local">⚐ Florida</p>
                     <h1 class="temp">72<sup>°C</sup></h1>
                     <h2 class="weather">Partly Cloudy</h2>
-                </hgroup>
+                </div>
         </main>
 
         <section class="sub-container">
@@ -42,7 +42,7 @@
                     <p>Humidity</p>
                 </div>
                 <div class="extraInfo-container">
-                    <span aria-hidden="true">༄</span>
+                    <span class="wind-span" aria-hidden="true">༄</span>
                     <p class="wind-speed info-bottom">12 kph</p>
                     <p>Wind</p>
                 </div>
